# ripplemapper

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  README.rst  pyproject.toml  pyproject.toml.rej  tox.ini
.github/workflows/: ci.yml  python-publish.yml
.tmp/py10-test-oldestdeps/: requirements-min.txt
docs/: conf.py  conf.py.rej  index.rst
docs/reference/: analyse.rst  classes.rst  contour.rst  image.rst  index.rst  io.rst
docs/tutorial/: index.rst
examples/: README.rst  placeholder.py
examples/contours/: README.rst  boundary_a_star.py  boundary_chan_vese.py  boundary_contours.py  removing_small_bumps.py
examples/io/: README.rst  creating_rippleimage.py  creating_rippleimageseries.py  loading_a_directory.py  loading_tiff.py
examples/visualisation/: README.rst  plotting_a_timeseries.py  plotting_ripple_contour.py  plotting_ripple_image.py  plotting_ripple_image_series.py  plotting_rippleimage.py
licenses/: LICENSE.rst
ripplemapper/: __init__.py  __init__.py.rej  analyse.py  classes.py  contour.py  detect.py  example_mod.py  image.py  io.py  ripple_classes.py  visualisation.py
ripplemapper/data/example/: 1_00052_sample.rimg  1_00052_sample.tif  1_00205_sample.tif  1_00375_sample.tif  1_00443_sample.tif  __init__.py  example_contour.txt
ripplemapper/data/example/rimgs/: 1_00052_sample.rimg  1_00205_sample.rimg  1_00375_sample.rimg  1_00443_sample.rimg  image_series.rimgs
ripplemapper/tests/: __init__.py  conftest.py  test_analyse.py  test_class_methods.py  test_classes.py  test_contour.py  test_example.py  test_image.py  test_io.py  test_vis.py
