[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ripplemapper"
description = "Tools for analysing the water air interface to programmatically detect surface waves."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" } # noqa
authors = [
  { name = "Alasdair Wilson", email = "alasdair.wlsn@googlemail.com" },
]
dependencies = [
  "numpy >1.24.0",
  "scipy >1.9.0",
  "matplotlib >3.6",
  "scikit-image >0.21",
  "opencv-python >4.7.0",
]
dynamic = ["version"]

[project.scripts]
open_astronomy_package_template_example = "ripplemapper.example_mod:main"

[project.optional-dependencies]
tests = [
  "pytest-astropy>=0.11.0",
  "pytest-mpl>=0.16",
  "pytest-xdist>=3.0.2",
  "pytest>=7.1.0",
  "pytest-doctestplus>=1.1.0",
  "pytest-cov",
]
docs = [
  "sphinx>=5.0.0",
  "sphinx-changelog>=0.1",
  "sphinx-automodapi>=0.14.1",
  "sphinx-copybutton>=0.5.0",
  "sphinx-design>=0.2.0",
  "sphinx-gallery>=0.13.0",
  "sphinx-hoverxref>=1.3.0",
  "pydata-sphinx-theme>=0.15.4",
  "sphinxext-opengraph>=0.8",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"ripplemapper.data.example" = ["*.tif", "example_contour.txt", "rimgs/image_series.rimgs"]

[tool.setuptools_scm]
write_to = "ripplemapper/version.py"
# Use "no-local-version" so dev releases are compatible with PyPI
local_scheme = "no-local-version"

[tool.pytest.ini_options]
norecursedirs = ['examples']
testpaths = ['ripplemapper/tests', 'docs']
text_file_format = "rst"
addopts = [
    "--doctest-glob=*.rst"
]

[tool.coverage.run]
omit = [
 "ripplemapper/__init*",
 "ripplemapper/conftest.py",
 "ripplemapper/*setup_package*",
 "ripplemapper/tests/*",
 "ripplemapper/*/tests/*",
 "ripplemapper/extern/*",
 "ripplemapper/version*",
 "*/ripplemapper/__init*",
 "*/ripplemapper/conftest.py",
 "*/ripplemapper/*setup_package*",
 "*/ripplemapper/tests/*",
 "*/ripplemapper/*/tests/*",
 "*/ripplemapper/extern/*",
 "*/ripplemapper/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
